--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,7 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Dashboard</h3><a
-                            class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="#"><i
-                                class="fas fa-download fa-sm text-white-50"></i>&nbsp;Generate Report</a>
+                        <h3 class="text-dark mb-0">Dashboard</h3>
                     </div>
                     <div class="row">
 
@@ -86,12 +84,7 @@
                     </div>
                 </div>
         </div>
-        <script src="{{ url_for('static',filename='assets/js/jquery.min.js')}}"></script>
-        <script src="{{ url_for('static',filename='assets/bootstrap/js/bootstrap.min.js')}}"></script>
-        <script src="{{ url_for('static',filename='assets/js/chart.min.js')}}"></script>
-        <script src="{{ url_for('static',filename='assets/js/bs-init.js')}}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-        <script src="{{ url_for('static',filename='assets/js/theme.js')}}"></script>
+      
 
 </body>
 
